@@ -316,13 +316,17 @@ namespace Castle.ActiveRecord
                 session.Save(instance);
                 session.Flush();
             }
-            catch (ValidationException)
-            {
-                throw;
-            }
             catch (Exception ex)
             {
-                throw new ActiveRecordException("Could not perform Save for " + type.Name, ex);
+                // NHibernate catches our ValidationException, and as such it is the innerexception here
+                if (ex.InnerException is ValidationException)
+                {
+                    throw ex.InnerException;
+                }
+                else
+                {
+                    throw new ActiveRecordException("Could not perform Create for " + instance.GetType().Name, ex);
+                }
             }
             finally
             {
@@ -392,13 +396,17 @@ namespace Castle.ActiveRecord
                 session.SaveOrUpdate(instance);
                 session.Flush();
             }
-            catch (ValidationException)
-            {
-                throw;
-            }
             catch (Exception ex)
             {
-                throw new ActiveRecordException("Could not perform Save for " + type.Name, ex);
+                // NHibernate catches our ValidationException, and as such it is the innerexception here
+                if (ex.InnerException is ValidationException)
+                {
+                    throw ex.InnerException;
+                }
+                else
+                {
+                    throw new ActiveRecordException("Could not perform Save for " + instance.GetType().Name, ex);
+                }
             }
             finally
             {
@@ -430,13 +438,17 @@ namespace Castle.ActiveRecord
                 session.Delete(instance);
                 session.Flush();
             }
-            catch (ValidationException)
-            {
-                throw;
-            }
             catch (Exception ex)
             {
-                throw new ActiveRecordException("Could not perform Delete for " + type.Name, ex);
+                // NHibernate catches our ValidationException, and as such it is the innerexception here
+                if (ex.InnerException is ValidationException)
+                {
+                    throw ex.InnerException;
+                }
+                else
+                {
+                    throw new ActiveRecordException("Could not perform Delete for " + instance.GetType().Name, ex);
+                }
             }
             finally
             {
