@@ -36,8 +36,9 @@ namespace Castle.ActiveRecord.Framework.Validators
 
 		public override bool Perform(object instance, object fieldValue)
 		{
-			ActiveRecordValidationBase arInstance = (ActiveRecordValidationBase) instance;
-			ActiveRecordModel model = ActiveRecordBase.GetModel( arInstance.GetType() );
+			//ActiveRecordValidationBase arInstance = (ActiveRecordValidationBase) instance;
+            Type instanceType = instance.GetType();
+            ActiveRecordModel model = ActiveRecordBase.GetModel(instance.GetType());
 
 			while (model != null)
 			{
@@ -51,25 +52,33 @@ namespace Castle.ActiveRecord.Framework.Validators
 
 			if (_pkModel == null)
 			{
-				throw new ValidationFailure("We couldn't find the primary key for " + arInstance.GetType().FullName + 
+                throw new ValidationFailure("We couldn't find the primary key for " + instanceType.FullName + 
 					" so we can't ensure the uniqueness of any field. Validatior failed");
 			}
-
 			_fieldValue = fieldValue;
 
-			return (bool) arInstance.Execute( new NHibernateDelegate(CheckUniqueness) );
+			return (bool) ActiveRecordMediator.Execute(instanceType, new NHibernateDelegate(CheckUniqueness), instance);
 		}
 
 		private object CheckUniqueness(ISession session, object instance)
 		{
 			ICriteria criteria = session.CreateCriteria( instance.GetType() );
-
-			object id = _pkModel.Property.GetValue( instance, new object[0] );
-
-			criteria.Add( Expression.And(
-				Expression.Eq(Property.Name, _fieldValue), 
-				Expression.Not(Expression.Eq(_pkModel.Property.Name, id))) );
-
+#if dotNet2
+            if (Property.Name.Equals(_pkModel.Property.Name, StringComparison.InvariantCultureIgnoreCase))
+#else
+            if (Property.Name.ToLower() == _pkModel.Property.Name.ToLower())
+#endif
+            {
+                // IsUniqueValidator is on the PrimaryKey Property, simplify query
+                criteria.Add(Expression.Eq(Property.Name, _fieldValue));
+            }
+            else
+            {
+                object id = _pkModel.Property.GetValue(instance, new object[0]);
+                criteria.Add(Expression.And(
+                                Expression.Eq(Property.Name, _fieldValue),
+                                Expression.Not(Expression.Eq(_pkModel.Property.Name, id))));
+            }			
 			return criteria.List().Count == 0;
 		}
 
